# CapriceESP32

./: .~lock.profile_ark__001.ods#  CMakeLists.txt  Makefile  README.md  partitions.csv  restore_debug  sdkconfig  version
btpatch/: bta_av_co.c  btc_a2dp_source.c  oi_codec_sbc_private.h
keymap/: Arkanoid1 (E).kmf  Bomb Jack (E).kmf  Roland on the Ropes (E).kmf
main/: CMakeLists.txt  component.mk  main.c
main/CPC/: CMakeLists.txt  component.mk
main/CPC/include/: CPC.h  Files.h  Keyboard.h  Prefs.h  Routines.h  Sound.h  cheat.h  gbuf.h  ttgui.h  vfsfile.h  vkb_layout.h
main/CPC/src/: CPC.c  Files.c  Keyboard.c  Prefs.c  Routines.c  Sound.c  cheat.c  e_exp.c  gbuf.c  s_rint.c  ttgui.c  ttgui.old  vfsfile.c  vkb_layout.c
main/NativeCPC/: CMakeLists.txt  component.mk
main/NativeCPC/include/: Native_CPC.h  Native_Disk.h
main/NativeCPC/src/: Native_AutoStart.c  Native_CPCExecute.c  Native_CPCReset.c  Native_CPCSetColor.c  Native_CPCStart.c  Native_CPCStop.c  Native_DiskEject.c  Native_DiskFormat.c  Native_DiskLoad.c  Native_DiskReadCatalogue.c  Native_DiskSave.c  Native_Peek.c  Native_Poke.c  Native_SoundCallback.c  Native_WinCopyScreen.c
main/common/: Math_math.h  Profile.h  Resources.h  sections.h  trace.h  trace_data.h  types.h
main/hardware/: CMakeLists.txt  component.mk
main/hardware/include/: a2dp.h  audio.h  backlight.h  battery.h  display.h  event.h  keypad.h
main/hardware/src/: a2dp.c  audio.c  backlight.c  battery.c  display.c  event.c  ringbuf.c  sdcard.c  system.c
main/minIni/: component.mk
main/minIni/include/: minGlue.h
main/rsc/: DAATable.h  FDCCommandTable.h  FDCCommandTableX64.h  amsdos.h  colours_green.h  colours_rgb.h  cpc464.h  cpc6128.h  cpc664.h  parados.h  vkb_cpcfont.h  vkb_keyboard.h
release/: caprice-esp32.elf  caprice-esp32.fw
tools/: make_emus_fw.sh
